--- a/starbucks.html
+++ b/starbucks.html
@@ -340,7 +340,7 @@
 	
         <li><strong>Enter your email & basic info</strong> ✍️</li>
 	<br>
-        <li><strong>Complete 3 or more recommended deals(IMPORTANT) </strong> 🚨</li>
+        <li><strong>Complete 3 to 5 recommended deals(IMPORTANT) </strong> 🚨</li>
 	<br>
         <li><strong>Claim your reward!</strong> 💸</li>
     </ol>
