--- a/starbucks.html
+++ b/starbucks.html
@@ -399,7 +399,7 @@
                                                                 </span>
                                                             </p>
                                                             <p style="text-align: center; margin-top: -15px"><span style="font-size: 18pt; font-family: Poppins, sans-serif;">Click below to claim your reward!</span>
-															<p> <a  href="https://www.tapplink.co/view/13614/213"  class="cta_btn q2-btn" > Claim Now!</a> 
+															<p> <a  href="https://uplevelrewarded.com/aff_c?offer_id=182&aff_id=13122"  class="cta_btn q2-btn" > Claim Now!</a> 
                                                             </p>
                                                             </p>
                                                          
